Dont turn off PC when turning off the TV. They have no relation anymore. I need to make separate automation for PC someday

--- a/automations/ground_floor/living_room/multimedia_switch_turn_off.yaml
+++ b/automations/ground_floor/living_room/multimedia_switch_turn_off.yaml
@@ -34,5 +34,5 @@
       entity_id : switch.living_room_entertainment_outlet_relay  # multimedia
     - service   : switch.turn_off
       entity_id : switch.living_room_charging_station_outlet_relay  # charging station
-    - service   : switch.turn_off
-      entity_id : switch.wake_up_vaste_pc
+#    - service   : switch.turn_off
+#      entity_id : switch.wake_up_vaste_pc
