--- a/automations/first_floor/landing/ceiling_restart.yaml
+++ b/automations/first_floor/landing/ceiling_restart.yaml
@@ -1,9 +1,9 @@
-- alias            : first_floor_landing_ceiling_on_restart
+- alias            : first_floor_landing_ceiling_restart
   id               : c772372b-8079-4f0d-984e-68cb8751be78
   trigger:
+    # Restart timer on any state change of motion sensor
     - platform     : state
       entity_id    : binary_sensor.first_floor_landing_motionsensor_occupancy
-      to           : 'on'
   condition:
     condition      : not
     conditions:
