--- a/automations/first_floor/bathroom/motion/lights_off.yaml
+++ b/automations/first_floor/bathroom/motion/lights_off.yaml
@@ -6,7 +6,23 @@
       event_data:
         entity_id  : timer.bathroom_light_timeout
   action:
-    - service      : light.turn_off
-      data:
-        entity_id  : light.bathroom_lights
-        transition : 5
+    - choose:
+      - conditions:
+          condition    : state
+          entity_id    : binary_sensor.bathroom_motionsensor_occupancy
+          state        : 'on'             # Do not turn off light if the motion event is still active.
+        sequence:                         # In this case restart the timer and wait for it to trigger on a falling edge.
+          - service    : timer.start
+            entity_id  : timer.bathroom_light_timeout
+      - conditions:
+          condition    : numeric_state
+          entity_id    : sensor.bathroom_tempsensor_humidity
+          above        : 71
+        sequence:
+          - service    : timer.start
+            entity_id  : timer.bathroom_light_timeout
+      default:
+        - service      : light.turn_off
+          data:
+            entity_id  : light.bathroom_lights
+            transition : 5
