--- a/entities/input_booleans/test_input.yaml
+++ b/entities/input_booleans/test_input.yaml
@@ -1,11 +1,7 @@
-test_input1:
-  name    : Test Bool Input 1
-  initial : off
+#test_input1:
+#  name    : Test Bool Input 1
+#  initial : off
 
-test_input2:
-  name    : Test Bool Input 2
-  initial : off
-
-test_input3:
-  name    : Test Bool Input 3
-  initial : off
+#test_input2:
+#  name    : Test Bool Input 2
+#  initial : off
