--- a/automations/first_floor/bedroom_1/lights_turn_off_after_timeout.yaml
+++ b/automations/first_floor/bedroom_1/lights_turn_off_after_timeout.yaml
@@ -5,11 +5,14 @@
       entity_id : light.bedroom_1_lights
       to        : 'on'
       for:
-        minutes : 10
+        minutes : 15
   condition:
     - condition : state
       entity_id : binary_sensor.kinderbedtijd
       state     : 'on'
+    - condition : state
+      entity_id : input_boolean.cleaning_mode
+      state     : 'off'
   action:
     - service   : light.turn_off
       entity_id : light.bedroom_1_lights
