Trigger automation also when bedtime becomes active. Changes bedroom lights from single light to a lightgroup.

--- a/automations/first_floor/bedroom_2/lights_turn_off_after_timeout.yaml
+++ b/automations/first_floor/bedroom_2/lights_turn_off_after_timeout.yaml
@@ -6,7 +6,15 @@
       to        : 'on'
       for:
         minutes : 15
+    - platform  : state
+      entity_id : binary_sensor.kinderbedtijd
+      to        : 'on'
   condition:
+    - condition : state
+      entity_id : light.bedroom_2_ceiling
+      state     : 'on'
+      for:
+        minutes : 15
     - condition : state
       entity_id : binary_sensor.kinderbedtijd
       state     : 'on'
