--- a/automations/second_floor/bedroom/remote_light_ceiling.yaml
+++ b/automations/second_floor/bedroom/remote_light_ceiling.yaml
@@ -8,4 +8,4 @@
         command     : 'single'
   action:
     - service       : light.toggle
-      entity_id     : light.attic_bedroom
+      entity_id     : light.second_floor_bedroom_lights
