--- a/automations/first_floor/landing/ceiling_on.yaml
+++ b/automations/first_floor/landing/ceiling_on.yaml
@@ -1,5 +1,6 @@
 - alias            : first_floor_landing_ceiling_on
   id               : 997e3172-eaae-4a75-98ed-bca25e751faa
+  mode             : queued
   trigger:
     - platform     : state
       entity_id    : binary_sensor.first_floor_landing_motionsensor_occupancy
