--- a/automations/ground_floor/living_room/harmony_start_activity_gtst.yaml
+++ b/automations/ground_floor/living_room/harmony_start_activity_gtst.yaml
@@ -23,4 +23,18 @@
     - service   : remote.turn_on
       entity_id : remote.roelofs_harmony_hub
       data:
-         activity: "Tv kijken"
+        activity: "Tv kijken"
+    - delay     : '00:00:10'
+    - service   : remote.send_command   # The Power input on the remote is a toggle, so you never know if you turn it off or on.
+      data:
+        entity_id: remote.roelofs_harmony_hub
+        device  : "Youfone"
+        command:
+          - "A"                         # The 'A' input always turns the device on.
+    - delay     : '00:00:14'            # Wait for Youfone AVR to boot
+    - service   : remote.send_command
+      data:
+        entity_id: remote.roelofs_harmony_hub
+        device  : "Youfone"
+        command:
+          - "4"                         # Set correct channel
