--- a/automations/ground_floor/living_room/harmony_start_activity_on_cast.yaml
+++ b/automations/ground_floor/living_room/harmony_start_activity_on_cast.yaml
@@ -3,20 +3,20 @@
 #################################################################
 - alias         : living_room_harmony_start_activity_on_cast
   id            : 12d00317-e454-452a-a37b-fddbef97a0ac
+  description   : Set the correct activity on Harmony remote when you start casting to Woonkamer.
   trigger:
     - platform  : state
       entity_id : media_player.woonkamer
       to        : 'playing'
-# This will interrupt someone if they are watching TV. I think it's ok.
-#  condition:
-#    - condition : state
-#      entity_id : remote.roelofs_harmony_hub
-#      state     : 'off'
   condition:
-    - condition : template
-      value_template: "{{ not is_state_attr('remote.roelofs_harmony_hub', 'current_activity', 'Chromecast/Netflix') }}"
+    condition   : not
+    conditions:
+      - condition: state
+        entity_id: remote.roelofs_harmony_hub
+        attribute: current_activity
+        state    : 'Chromecast/Netflix'
   action:
     - service   : remote.turn_on
       entity_id : remote.roelofs_harmony_hub
       data:
-         activity: "Chromecast/Netflix"
+        activity: "Chromecast/Netflix"
