Updated device trackers of grandma's.

--- a/entities/persons/ria.yaml
+++ b/entities/persons/ria.yaml
@@ -1,5 +1,4 @@
 - name    : Ria
   id      : ria
   device_trackers:
-    - device_tracker.ria_phone_wifi
-    - device_tracker.ria_phone_bt
+    - device_tracker.galaxy_a5_2016
