--- a/automations/001 restroom/light_on.yaml
+++ b/automations/001 restroom/light_on.yaml
@@ -8,9 +8,8 @@
       entity_id    : light.restroom_light                      # Needed because its possible to start the light by hand without motion sensor detecting motion.
       to           : 'on'
   condition:
-    - condition    : numeric_state
-      entity_id    : sensor.home_assistant_uptime
-      above        : 2
+    - condition    : template
+      value_template: "{{  (((as_timestamp(now()) - as_timestamp(states('sensor.home_assistant_uptime'))) % 3600) / 60) | int > 2 }}"
     - condition    : state
       entity_id    : input_boolean.cleaning_mode
       state        : 'off'
