--- a/automations/005 kitchen/wallswitch_light_counter.yaml
+++ b/automations/005 kitchen/wallswitch_light_counter.yaml
@@ -12,9 +12,8 @@
   condition:
     - condition     : template
       value_template: "{{ states.light.kitchen_ceiling_group.state == states.light.kitchen_counter_light.state }}"
-    - condition : numeric_state
-      entity_id : sensor.home_assistant_uptime
-      above     : 2
+    - condition     : template
+      value_template: "{{  (((as_timestamp(now()) - as_timestamp(states('sensor.home_assistant_uptime'))) % 3600) / 60) | int > 2 }}"
   action:
     - service   : light.toggle
       entity_id : light.kitchen_counter_light
