--- a/automations/100 landing/wallswitch_light_ceiling.yaml
+++ b/automations/100 landing/wallswitch_light_ceiling.yaml
@@ -10,9 +10,8 @@
       from          : 'on'
       to            : 'off'
   condition:
-    - condition     : numeric_state
-      entity_id     : sensor.home_assistant_uptime
-      above         : 2
+    - condition    : template
+      value_template: "{{  (((as_timestamp(now()) - as_timestamp(states('sensor.home_assistant_uptime'))) % 3600) / 60) | int > 2 }}"
   action:
     - choose:
         - conditions:
