--- a/automations/101 masterbedroom/climate.yaml
+++ b/automations/101 masterbedroom/climate.yaml
@@ -2,9 +2,8 @@
   id            : 3ed7cd1f-1296-48bb-b90d-887aaf3f9dbb
   mode          : queued
   trigger:
-    - platform  : numeric_state
-      entity_id : sensor.home_assistant_uptime
-      above     : 2
+#    - platform  : template
+#      value_template: "{{ (((as_timestamp(now()) - as_timestamp(states('sensor.home_assistant_uptime'))) % 3600) / 60) | int > 2 }}"
     - platform  : event
       event_type: automation_reloaded
     - platform  : state
@@ -17,7 +16,9 @@
       at:
         - "22:00:00"
         - "23:00:00"
-
+  condition:
+    - condition : template
+      value_template: "{{  (((as_timestamp(now()) - as_timestamp(states('sensor.home_assistant_uptime'))) % 3600) / 60) | int > 2 }}"
   action:
     - choose:
         # Turn radiator off
