--- a/automations/104 bathroom/climate.yaml
+++ b/automations/104 bathroom/climate.yaml
@@ -2,9 +2,8 @@
   id            : 818bccea-3335-4f3d-b62b-4490c4f9ea03
   mode          : queued
   trigger:
-    - platform  : numeric_state
-      entity_id : sensor.home_assistant_uptime
-      above     : 2
+#    - platform  : template
+#      value_template: "{{ (((as_timestamp(now()) - as_timestamp(states('sensor.home_assistant_uptime'))) % 3600) / 60) | int > 2 }}"
     - platform  : event
       event_type: automation_reloaded
     - platform  : state
@@ -19,7 +18,9 @@
         - "06:30:00"
         - "07:30:00"
         - "08:30:00"
-
+  condition:
+    - condition : template
+      value_template: "{{  (((as_timestamp(now()) - as_timestamp(states('sensor.home_assistant_uptime'))) % 3600) / 60) | int > 2 }}"
   action:
     - choose:
         # Turn radiator off
