--- a/automations/400 general/anyone/leaves_home.yaml
+++ b/automations/400 general/anyone/leaves_home.yaml
@@ -18,8 +18,8 @@
     - delay     : '00:01:00'
     - service   : switch.turn_off
       entity_id : switch.living_room_entertainment_outlet_relay
-    - service   : switch.turn_off
-      entity_id : switch.living_room_charging_station_outlet_relay    # charging station
+#    - service   : switch.turn_off
+#      entity_id : switch.living_room_charging_station_outlet_relay    # charging station
 
     - service     : notify.stefan
       data:
