--- a/automations/300 outside/christmas_star.yaml
+++ b/automations/300 outside/christmas_star.yaml
@@ -6,12 +6,12 @@
       at:
         - "07:30:00"      # Turn on light in the morning
         - "00:00:05"      # Turn off light a couple seconds after midnight
-    - platform  : sun     # Turn off light at sunrise
+    - platform  : sun     # Turn off light half hour after sunrise
       event     : sunrise
-      offset    : "00:00:00"
-    - platform  : sun     # Turn on light at sunset
+      offset    : "00:30:00"
+    - platform  : sun     # Turn on light half hour before sunset
       event     : sunset
-      offset    : "00:00:00"
+      offset    : "-00:30:00"
   condition:
     - condition : state
       entity_id : input_boolean.christmas_time
@@ -26,7 +26,7 @@
                 before      : "08:35:00"
               - condition   : sun         # Condition to turn on in the evening
                 after       : sunset
-                after_offset: "-00:15:00"
+                after_offset: "-00:45:00"
           sequence:
             - service       : switch.turn_on
               entity_id     : switch.living_room_charging_station_outlet_relay  # christmas star
