--- a/automations/201 bedroom 3/auto_lights.yaml
+++ b/automations/201 bedroom 3/auto_lights.yaml
@@ -1,4 +1,4 @@
-- alias         : second_floor_bedroom_auto_lights
+- alias         : bedroom_3_auto_lights
   id            : 45ecb78f-307b-4526-ac2d-83c8c4757b71
   trigger:
     - platform  : time
@@ -12,7 +12,7 @@
       state     : 'on'
   action:
     - service   : light.turn_on
-      entity_id : light.attic_bedroom
+      entity_id : light.bedroom_3_ceiling
     - delay     : "{{ range(8 * 60, 12 * 60 + 1) | random }}"
     - service   : light.turn_off
-      entity_id : light.attic_bedroom
+      entity_id : light.bedroom_3_ceiling
