--- a/automations/201 bedroom 3/lights_turn_off_after_timeout.yaml
+++ b/automations/201 bedroom 3/lights_turn_off_after_timeout.yaml
@@ -1,8 +1,8 @@
-- alias         : second_floor_bedroom_lights_turn_off_after_timeout
+- alias         : bedroom_3_lights_turn_off_after_timeout
   id            : cb837c46-abaf-4cc3-ac21-63e7546eae10
   trigger:
     - platform  : state
-      entity_id : light.second_floor_bedroom_lights
+      entity_id : light.bedroom_3_lights
       to        : 'on'
       for:
         minutes : 15
@@ -11,7 +11,7 @@
       to        : 'on'
   condition:
     - condition : state
-      entity_id : light.second_floor_bedroom_lights
+      entity_id : light.bedroom_3_lights
       state     : 'on'
       for:
         minutes : 15
@@ -23,4 +23,4 @@
       state     : 'off'
   action:
     - service   : light.turn_off
-      entity_id : light.second_floor_bedroom_lights
+      entity_id : light.bedroom_3_lights
