Floorheating pump switch changed. It was a Ikea zigbee switch, but every half year it stopped responding. I changed it to a wifi espHome device.

--- a/automations/003 living room/multimedia_switch_turn_off.yaml
+++ b/automations/003 living room/multimedia_switch_turn_off.yaml
@@ -32,7 +32,7 @@
 #    - delay     : '00:01:00'    # 1 minute
     - service   : switch.turn_off
       entity_id : switch.living_room_entertainment_outlet_relay  # multimedia
-#    - service   : switch.turn_off
-#      entity_id : switch.living_room_charging_station_outlet_relay  # charging station
+    - service   : switch.turn_off
+      entity_id : switch.living_room_charging_station_outlet_relay  # charging station
 #    - service   : switch.turn_off
 #      entity_id : switch.wake_up_vaste_pc
