--- a/automations/003 living room/multimedia_switch_turn_on.yaml
+++ b/automations/003 living room/multimedia_switch_turn_on.yaml
@@ -19,5 +19,5 @@
   action:
     - service   : switch.turn_on
       entity_id : switch.living_room_entertainment_outlet_relay  # multimedia switch
-#    - service   : switch.turn_on
-#      entity_id : switch.living_room_charging_station_outlet_relay  # charging station
+    - service   : switch.turn_on
+      entity_id : switch.living_room_charging_station_outlet_relay  # charging station
