--- a/esphome/shelly_6.yaml
+++ b/esphome/shelly_6.yaml
@@ -48,6 +48,10 @@ sensor:
     name                 : "${devicelocation} WiFi Signal"
     update_interval      : 60s
 
+text_sensor:
+  - platform             : version
+    name                 : "${devicelocation} Version"
+
 binary_sensor:
   - platform             : gpio
     pin                  : GPIO5
